--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<html xmlns="http://www.zyyao.w3space.com" xml:lang="en">
 
 <head>
 
-  <title>Yunhe Wang's Homepage</title>
+  <title>Zhiyuan Yao's Homepage</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
