--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h1>Zhiyuan Yao</h1>
     <h1>姚致远</h1>
     <a style="color: #447ec9" href="mailto:yzy1116@shao.ac.cn">Email</a> &nbsp/&nbsp
-    <a style="color: #447ec9" href="https://docs.google.com/viewer?url=${https://github.com/Zhiyuan-21/HomePage/blob/master/data/CV.pdf}">CV (Sept 2021)</a> &nbsp/&nbsp
+    <a style="color: #447ec9" href="https://drive.google.com/file/d/1B96BUWEgXi2eJz1hvN5YVQVzpk5SHaf0/view?usp=sharing">CV (Sept 2021)</a> &nbsp/&nbsp
     <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/search/q=docs(library%2FRheNa-JwR2qT-8rXTS8T2A)&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank">ADS</a>
 
     </div>
