--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <div class="w3-light-grey w3-center w3-padding-24">
 
-    &copy Zhiyuan Yao &middot Powered by <a href="https://www.w3schools.com/" target="_blank">w3schools </a>
+    &copy Zhiyuan Yao &middot Powered by <a href="https://pages.github.com/" target="_blank">Github Pages</a>
 
 
   </div>
