--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 
     <div class="w3-padding-32">
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-        I am a PhD student at Shanghai Astronomical Observatory. I mainly use simulations to study AGN feedback on the galaxy evolution.
+        I am a PhD student at Shanghai Astronomical Observatory, supervised by Prof. Feng Yuan.
+        My research interests are broad, yet basically center around the galaxy evolution driven 
+        by AGN wind feedback, including wind driven mechanism, cold gas formation and interaction 
+        with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
+        to perform studies, but also look for analytic explanations for the results, which are also examined by observations.
 
       </p>
     </div>
