--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 
     <div class="w3-padding-32">
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-        I am a PhD student at Shanghai Astronomical Observatory, supervised by Prof. Feng Yuan.
-        My research interests are broad, yet basically center around the galaxy evolution driven 
-        by AGN wind feedback, including wind driven mechanism, cold gas formation and interaction 
-        with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
+        I am a PhD student at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a>, 
+        supervised by <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. My research interests are broad, 
+        yet basically center around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
+        and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
         to perform studies, but also look for analytic explanations for the results, which are also examined by observations.
 
       </p>
