--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         yet basically center around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
         to perform studies, but also look for analytic explanations for the results, which are also examined by observations.
+        Besides doing research, I enjoy playing football, hiking, and reading.
 
       </p>
     </div>
