--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
         I am a PhD student at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a>, 
         supervised by <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. My research interests are broad, 
-        yet basically center around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
+        yet basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
         to perform studies, but also look for analytic explanations for the results, which are also examined by observations.
         Besides doing research, I enjoy playing football, hiking, and reading.
@@ -123,7 +123,23 @@
   <div class="w3-container w3-padding-32" id="projects">
     <h2>Recent Projects</h2>
     <p class="w3-justify">
-        About my project.
+      <h4><li>AGN feedback in an isolated galaxy</li></h4>
+      The important role of AGN mechanical feedback in early-type galaxies is supported both by observations and simulations. 
+      Relativistic jets and bubbles are one of the most prominent structures in giant galaxies, while simulations with AGN mechanical 
+      feedback are better consistent with observations including the BH-bulge mass relation, Lx-Tx relation, galaxy formation efficiency 
+      at high mass end, etc. Despite the big success of the cosmological simulations in reproducing the universe, we do not fully understand 
+      the physics inside the AGN sub-grid model, which is full of free parameters to simplify the calculations on small scales. To figure out 
+      the physics behind parameters and provide a physically motivated AGN sub-grid model, we perform simulations on an isolated galaxy with 
+      much higher resolution at the center.
+      
+      <h4><li>Cloud-wind interactions</li></h4>
+      Cold gas is the key to interesting physics in galaxies, such as BH accretion and star formation, thus very important for us 
+      to understand the galaxy evolution. The formation and evolution of the cold gas in the hot medium gains more attention in the 
+      theoretical field in recent yeas due to the observational ubiquity of the multi-phase gas. The AGN wind might stimulate the cold 
+      gas formation by uplift, and the cold gas accretion in turn triggers the strong AGN mechanical feedback. There is possibly a close 
+      link between the wind power and the cold gas mass. However, the real cases are much more complicated due to the hot-cold gas interactions, 
+      which is the goal of this project. We perform the windtunnel simulations by injecting hot wind blown to the cold cloud. Then we can study 
+      the cloud evolution including shattering, evaporation, or condensing in the combined effects of conduction and cooling.
     </p>
 
 
