--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         supervised by <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. My research interests are broad, 
         yet basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
-        to perform studies, but also look for analytic explanations for the results, which are also examined by observations.
+        to perform studies, but also look for analytic explanations for the results, and finally examined by observations.
         Besides doing research, I enjoy playing football, hiking, and reading.
 
       </p>
