--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
     <div class="w3-padding-32">
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
         I am a PhD student at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a>, 
-        supervised by <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. My research interests are broad, 
-        yet basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
+        supervised by <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. My research interests are 
+        basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
-        to perform studies, but also look for analytic explanations for the results, and finally examined by observations.
+        to perform studies, but also look for analytic explanations for the results, which can be finally examined by observations.
         Besides doing research, I enjoy playing football, hiking, and reading.
 
       </p>
@@ -111,6 +111,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
+      <p><li> 10/2021, give a <a style="color: #447ec9" href="https://drive.google.com/file/d/1v_12sVAaO228pl-0L5cehzRNpyKM3pBa/view?usp=sharing" target="_blank">talk</a> about cloud-wind interactions at MPA institute seminar, Munich. </li></p>
       <p><li> 07/2021, give a talk about cloud-wind interactions in Ringberg, Munich. </li></p>
       <p><li> 04/2021, exchange in Volker Springel's group of MPA for half a year, studying cloud-wind interactions by AREPO. </li></p>
       <p><li> 01/2021, publish one <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501..398Y/abstract">paper</a> on simulating AGN feedback in an isolated elliptical.
