--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
       <p><li> 10/2021, give a <a style="color: #447ec9" href="https://drive.google.com/file/d/1v_12sVAaO228pl-0L5cehzRNpyKM3pBa/view?usp=sharing" target="_blank">talk</a> about cloud-wind interactions at MPA institute seminar, Munich. </li></p>
       <p><li> 07/2021, give a talk about cloud-wind interactions in Ringberg, Munich. </li></p>
       <p><li> 04/2021, exchange in Volker Springel's group of MPA for half a year, studying cloud-wind interactions by AREPO. </li></p>
-      <p><li> 01/2021, publish one <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501..398Y/abstract">paper</a> on simulating AGN feedback in an isolated elliptical.
-      <p><li> 02/2020, publish one <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.492..444Y/abstract">paper</a> on simulating hot gas flows across Bondi radius of NGC 3115.
+      <p><li> 01/2021, publish the paper <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501..398Y/abstract">"Active galactic nucleus feedback in an elliptical galaxy with the most updated AGN physics: Parameter explorations"</a> on MNRAS.
+      <p><li> 02/2020, publish the paper <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.492..444Y/abstract">"Hot gas flows on a parsec scale in the low-luminosity active galactic nucleus NGC 3115"</a> on MNRAS.
       <p><li> 02/2018, attend Athena++ winter worshop in Shanghai. </li></p>
-      <p><li> 09/2016, start PhD research in Shanghai Astronomical Observatory. </li></p>
-
+      <p><li> 09/2016, start my PhD research at Shanghai Astronomical Observatory. </li></p>
+      <p><li> 06/2016, graduate from University of Science and Technology of China. </li></p>
   </div>
 <!-- The Projects Section -->
   <div class="w3-container w3-padding-32" id="projects">
