--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> 10/2021, give a <a style="color: #447ec9" href="https://drive.google.com/file/d/1v_12sVAaO228pl-0L5cehzRNpyKM3pBa/view?usp=sharing" target="_blank">talk</a> about cloud-wind interactions at MPA institute seminar, Munich. </li></p>
+      <p><li> 10/2021, give a <a style="color: #447ec9" href="https://drive.google.com/file/d/1v_12sVAaO228pl-0L5cehzRNpyKM3pBa/view?usp=sharing" target="_blank">talk</a> about cloud-wind interactions at MPA institute seminar, Garching. </li></p>
       <p><li> 07/2021, give a talk about cloud-wind interactions in Ringberg, Munich. </li></p>
       <p><li> 04/2021, exchange in Volker Springel's group of MPA for half a year, studying cloud-wind interactions by AREPO. </li></p>
       <p><li> 01/2021, publish the paper <a style="color: #447ec9" href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501..398Y/abstract">"Active galactic nucleus feedback in an elliptical galaxy with the most updated AGN physics: Parameter explorations"</a> on MNRAS.
