--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
         I am a PhD student at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a> since 2016. 
         My supervisor is <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. In the autumn of 2022, I will
-        be a postdoc in cosmo group of the Hebrew University. My research interests are 
-        basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
+        be a postdoc in cosmo group of <a style="color: #447ec9" href="https://phys.huji.ac.il/astrophysics-and-relativity" target="_blank">the Hebrew University of Jerusalem</a>. 
+        My research interests are basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
         to perform studies, but also look for analytic explanations for the results, which can be finally examined by observations.
         Besides doing research, I enjoy playing football, hiking, and reading.
