--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Zhiyuan Yao is currently a PhD student at Shanghai Astronomical Observatory">
+  <meta name="description" content="Zhiyuan Yao is currently a postdoc at Hebrew University of Jerusalem">
   <meta name="keywords" content="Zhiyuan Yao, 姚致远, yaozhiyuan, Yuan, Yao, Computational astrophysics">
   <meta name="author" content="Zhiyuan Yao" />
 
@@ -69,7 +69,7 @@
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-dark-grey w3-xlarge">
-  <div class="w3-bar-item w3-padding-24">YUAN</div>
+  <div class="w3-bar-item w3-padding-24">YAO</div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
   </div>
 </header>
@@ -97,9 +97,9 @@
 
     <div class="w3-padding-32">
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-        I am a PhD student at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a> since 2016. 
-        My supervisor is <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>. In the autumn of 2022, I will
-        be a postdoc in cosmo group of <a style="color: #447ec9" href="https://phys.huji.ac.il/astrophysics-and-relativity" target="_blank">the Hebrew University of Jerusalem</a>. 
+        I am a postdoc at <a style="color: #447ec9" href="https://phys.huji.ac.il/astrophysics-and-relativity" target="_blank">Hebrew University of Jesusalem</a> since 2022, basically
+        working with <a style="color: #447ec9" href="https://www.nirmandelker.com/" target="_blank">Nir Mandelker</a> and <a style="color: #447ec9" href="http://old.phys.huji.ac.il/~dekel/" target="_blank">Avishai Dekel</a> on filament dynamics and galaxy evolution.
+        I got my PhD at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a> under the supervison of <a style="color: #447ec9" href="http://202.127.29.4/fyuan/yuan.html" target="_blank">Prof. Feng Yuan</a>.
         My research interests are basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
         to perform studies, but also look for analytic explanations for the results, which can be finally examined by observations.
