--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p class="w3-justify" style="width:90%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
         I am a postdoc at <a style="color: #447ec9" href="https://phys.huji.ac.il/astrophysics-and-relativity" target="_blank">Hebrew University of Jesusalem</a> since 2022, basically
         working with <a style="color: #447ec9" href="https://www.nirmandelker.com/" target="_blank">Nir Mandelker</a> and <a style="color: #447ec9" href="http://old.phys.huji.ac.il/~dekel/" target="_blank">Avishai Dekel</a> on filament dynamics and galaxy evolution.
-        I got my PhD at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a> under the supervison of <a style="color: #447ec9" href="http://202.127.29.4/fyuan" target="_blank">Prof. Feng Yuan</a>.
+        I got my PhD at <a style="color: #447ec9" href="http://english.shao.cas.cn/" target="_blank">Shanghai Astronomical Observatory</a> under the supervison of <a style="color: #447ec9" href="http://202.127.29.4/fyuan" target="_blank">Feng Yuan</a>.
         My research interests are basically centered around the galaxy evolution driven by AGN wind feedback, including wind driven mechanism, cold gas formation 
         and interaction with the hot wind, cold gas accretion with angular momentum, etc. I mainly use simulations 
         to perform studies, but also look for analytic explanations for the results, which can be finally examined by observations.
